tests/samples/0065/error.txt
error[P0031]: unexpected token `[`, expected an expression
  --> 0065/code.ara:2:10
  |
2 |     $a = [1, 2, 3];
  |          ^

error: failed to parse "0065/code.ara" due to the above issue(s)
 = summary: 1 error(s)

